Learning more things

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=58C9B8C041C0E8C75CD4E7BCB866068E
+CompanyName=Questly
+CompanyDistinguishedName=Questly
 
 [StartupActions]
 bAddPacks=True
